objects/Inventory_Items__c.object
<CustomObject>
    <label>Inventory Item</label>
    <nameField>
        <label>Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Age__c</fullName>
        <formula>(today()- Date_Received__c )/30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (mo)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INST</fullName>
                </value>
                <value>
                    <fullName>COMP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serial_No__c</fullName>
        <label>Serial No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Material_Num__c</fullName>
        <label>Material Num</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_Price__c</fullName>
        <formula>if(ISPICKVAL( Type__c , &quot;INST&quot;), if( Age__c  &lt; 6, List_Price__c ,
if(Age__c &lt;19, round((List_Price__c * (1-(Age__c *1.9/100))),0),
if(Age__c &lt;25, round((List_Price__c * (1-(Age__c *2.4/100))),0),
round((List_Price__c *0.4),0)))), if(Age__c &lt; 4, List_Price__c, IF(Age__c &lt; 7, List_Price__c * 0.75,List_Price__c*0.5) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field_Inventory__c</fullName>
        <label>Field Inventory</label>
        <referenceTo>Field_Inventory__c</referenceTo>
        <relationshipLabel>Inventory Items</relationshipLabel>
        <relationshipName>Inventory_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>